SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${TritonSort_SOURCE_DIR}/cmake_tools")

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(GenSort)

FIND_PACKAGE(ZLIB REQUIRED)

ADD_LIBRARY(rand16 rand16.c)

ADD_EXECUTABLE(gensort gensort.c)
TARGET_LINK_LIBRARIES(gensort rand16 z)

ADD_EXECUTABLE(valsort valsort.c)
TARGET_LINK_LIBRARIES(valsort rand16 z)
TARGET_COMPILE_DEFINITIONS(valsort PRIVATE)
