SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${TritonSort_SOURCE_DIR}/cmake_tools")

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(GenSort)

ADD_LIBRARY(rand16 rand16.c)

ADD_EXECUTABLE(gensort gensort.c)
TARGET_LINK_LIBRARIES(gensort rand16 ${ZLIB_LIBRARY})

ADD_EXECUTABLE(valsort valsort.c)
TARGET_LINK_LIBRARIES(valsort rand16 ${ZLIB_LIBRARY})
TARGET_COMPILE_DEFINITIONS(valsort PRIVATE)
