INCLUDE("${TritonSort_SOURCE_DIR}/cmake_tools/RecurseCCFiles.cmake")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${TritonSort_SOURCE_DIR}/cmake_tools")

ADD_SUBDIRECTORY(${GTEST_ROOT_DIR} "${CMAKE_CURRENT_BINARY_DIR}/gtest")
INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include)

RECURSE_CC_FILES(common)
RECURSE_CC_FILES(themis_core)
RECURSE_CC_FILES(mapreduce)

ADD_EXECUTABLE(tests tests.cc TestUtils.cc ${common_Files} ${themis_core_Files}
  ${mapreduce_Files})
TARGET_LINK_LIBRARIES(tests gtest tritonsort_common tritonsort_core
  mapreduce_workers ${MEMORY_MGMT_LINK_LIBRARY})

IF(DEFINED MEMORY_MGMT_CXX_FLAG)
SET_TARGET_PROPERTIES(tests PROPERTIES COMPILE_FLAGS
  ${MEMORY_MGMT_CXX_FLAG})
ENDIF(DEFINED MEMORY_MGMT_CXX_FLAG)

ADD_EXECUTABLE(test_get_ip test_get_ip.cc)
TARGET_LINK_LIBRARIES(test_get_ip tritonsort_core ${MEMORY_MGMT_LINK_LIBRARY})

IF(DEFINED MEMORY_MGMT_CXX_FLAG)
SET_TARGET_PROPERTIES(test_get_ip PROPERTIES COMPILE_FLAGS
  ${MEMORY_MGMT_CXX_FLAG})
ENDIF(DEFINED MEMORY_MGMT_CXX_FLAG)

ADD_EXECUTABLE(test_disk_io test_disk_io.cc)
TARGET_LINK_LIBRARIES(test_disk_io tritonsort_core ${MEMORY_MGMT_LINK_LIBRARY})

IF(DEFINED MEMORY_MGMT_CXX_FLAG)
SET_TARGET_PROPERTIES(test_disk_io PROPERTIES COMPILE_FLAGS
  ${MEMORY_MGMT_CXX_FLAG})
ENDIF(DEFINED MEMORY_MGMT_CXX_FLAG)
